--- a/public/free.html
+++ b/public/free.html
@@ -29,6 +29,7 @@
       </div>
     </div>
     <div class="beat-bar" id="beatBar"></div>
+    <div class="state-log" id="stateLog"></div>
     <script src="js/app.js"></script>
   </body>
 </html>
